LW-20256 domain specific sync (#14428)
* support for multiple API keys to TC bundle

* fixed argument name

* LW-20256 routing synchronization jobs based on course type

* fixed s/midwives/midwifery

* after-merge stuff

* fixed tests

--- a/php-packages/thinkingcap/tests/config/config.yaml
+++ b/php-packages/thinkingcap/tests/config/config.yaml
@@ -11,7 +11,9 @@ framework:
     test: true
 
 lingoda_thinkingcap:
-    api_key: '%api_key%'
+    api_keys:
+        test1: asd1
+        test2: z6kl2fvfqsor4x2sq5hu
     wsdl_urls:
         course_management: '%course_management%'
         learner_management: '%learner_management%'
