--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "name": "lingoda/thinkingcap",
+    "name": "lingoda/thinkingcap-client",
     "description": "Lingoda Thinkingcap Bundle",
     "type": "symfony-bundle",
-    "version": "2.3.1",
     "require-dev": {
         "laminas/laminas-code": "^4.5",
         "phpspec/phpspec": "^7.1.x-dev",
