--- a/.github/workflows/thinkingcap-client.yaml
+++ b/.github/workflows/thinkingcap-client.yaml
@@ -1,15 +1,6 @@
 name: php-packages
 permissions: write-all
-on:
-    pull_request:
-        paths:
-            - .
-    push:
-        branches:
-            - master
-        paths:
-            - .
-
+on: [pull_request, push]
 env:
     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     GITHUB_TOKEN: ${{ github.token }}
