--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,18 @@
     "type": "symfony-bundle",
     "require-dev": {
         "laminas/laminas-code": "^4.5",
-        "phpspec/phpspec": "^7.1.x-dev",
+        "phpspec/phpspec": "^7.2",
         "phpunit/phpunit": "^9.5",
-        "symfony/phpunit-bridge": "^5.3"
+        "symfony/phpunit-bridge": "^6.0"
     },
     "license": "proprietary",
     "require": {
         "php": "^8.1",
-        "phpro/soap-client": "^1.7",
-        "symfony/framework-bundle": "^4.4 || ^5.2",
-        "symfony/yaml": "^4.4 || ^5.2"
+        "nyholm/psr7": "^1.7",
+        "phpro/soap-client": "^2.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-client": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "conflict": {
         "psr/cache": ">=2.0.0",
@@ -33,6 +35,9 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
