--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,9 @@
         "php": "^8.1",
         "nyholm/psr7": "^1.7",
         "phpro/soap-client": "^2.4",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/http-client": "^5.4",
-        "symfony/yaml": "^5.4"
-    },
-    "conflict": {
-        "psr/cache": ">=2.0.0",
-        "symfony/cache": ">=6.0.0"
+        "symfony/framework-bundle": "^5.4 || ^6.3",
+        "symfony/http-client": "^5.4 || ^6.3",
+        "symfony/yaml": "^5.4 || ^6.3"
     },
     "autoload": {
         "psr-4": {
