--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.1",
         "nyholm/psr7": "^1.7",
-        "phpro/soap-client": "^3.0.0",
+        "phpro/soap-client": "^2.4",
         "symfony/framework-bundle": "^5.4 || ^6.3",
         "symfony/http-client": "^5.4 || ^6.3",
         "symfony/yaml": "^5.4 || ^6.3"
@@ -33,8 +33,7 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "php-http/discovery": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "php-http/discovery": true
         }
     }
 }
