--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
         "laminas/laminas-code": "^4.5",
         "phpspec/phpspec": "^7.2",
         "phpunit/phpunit": "^9.5",
-        "symfony/phpunit-bridge": "^6.0"
+        "symfony/phpunit-bridge": "^5.4 || ^6.4 || ^7.0"
     },
     "license": "proprietary",
     "require": {
         "php": "^8.1",
         "nyholm/psr7": "^1.7",
         "phpro/soap-client": "^3.0",
-        "symfony/framework-bundle": "^5.4 || ^6.3",
-        "symfony/http-client": "^5.4 || ^6.3",
-        "symfony/yaml": "^5.4 || ^6.3"
+        "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.0",
+        "symfony/http-client": "^5.4 || ^6.4 || ^7.0",
+        "symfony/yaml": "^5.4 || ^6.4 || ^7.0"
     },
     "autoload": {
         "psr-4": {
